# internal/core/domain/user_oauth_identity.go
@@ -1,0 +1,12 @@
+package domain
+
+import "time"
+
+type UserOAuthIdentity struct {
+	ID          int
+	UserID      int
+	Provider    string
+	ProviderSub string
+	Email       string
+	CreateAt    time.Time
+}
